--- a/BaiTap/app/src/main/res/layout/activity_user_profile.xml
+++ b/BaiTap/app/src/main/res/layout/activity_user_profile.xml
@@ -23,14 +23,16 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"/>
             <ImageView
-                android:src="@drawable/ic_user"
+                android:src="@drawable/ic_youth"
                 android:id="@+id/imageview"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="100dp"/>
 
+
             <TextView
+                android:textAlignment="center"
                 android:layout_centerInParent="true"
                 android:id="@+id/showtextuser"
                 android:layout_width="261dp"
@@ -40,6 +42,7 @@
                 android:layout_marginTop="290dp"
                 android:drawablePadding="10dp" />
             <TextView
+                android:textAlignment="center"
                 android:layout_marginTop="20dp"
                 android:layout_below="@+id/showtextuser"
                 android:layout_centerInParent="true"
@@ -49,6 +52,7 @@
                 android:layout_marginLeft="20dp"
                 android:drawablePadding="20dp" />
             <TextView
+                android:textAlignment="center"
                 android:layout_marginTop="20dp"
                 android:layout_below="@+id/showtextname"
                 android:layout_centerInParent="true"
